# zer018

./: LICENSE  README.md
zer018_core/core_msgs/: CMakeLists.txt
zer018_core/core_msgs/msg/: Control.msg
zer018_core/core_util/: CMakeLists.txt  package.xml
zer018_core/core_util/config/: system_config.yaml
zer018_core/core_util/data/: 0512-2018_02:18:21_monitor.avi  0512-2018_02:19:45_monitor.avi  0512-2018_02:21:41_monitor.avi  0512-2018_02:22:07_monitor.avi  0512-2018_02:41:02_monitor.avi  0512-2018_02:44:59_monitor.avi  0512-2018_02:45:18_monitor.avi  0512-2018_02:46:08_monitor.avi  0512-2018_02:58:39_monitor.avi  0512-2018_03:03:53_monitor.avi  0512-2018_03:05:29_monitor.avi  0512-2018_03:06:09_monitor.avi  0512-2018_03:07:33_monitor.avi  0512-2018_03:09:01_monitor.avi  0512-2018_03:10:47_monitor.avi  0512-2018_03:12:20_monitor.avi  0512-2018_03:17:14_monitor.avi  0512-2018_03:17:42_monitor.avi  0512-2018_03:19:37_monitor.avi  0512-2018_03:22:32_monitor.avi  0512-2018_03:23:07_monitor.avi  0512-2018_03:27:36_monitor.avi  0512-2018_03:28:32_monitor.avi  0512-2018_03:28:38_monitor.avi  0512-2018_03:28:55_monitor.avi  0512-2018_03:29:14_monitor.avi  0512-2018_04:29:50_monitor.avi  0512-2018_05:50:22_monitor.avi  0512-2018_05:52:08_monitor.avi  0512-2018_05:52:55_monitor.avi  0512-2018_05:53:39_monitor.avi  0512-2018_05:54:35_monitor.avi  0512-2018_05:59:49_monitor.avi  0512-2018_06:02:53_monitor.avi  0512-2018_06:08:20_monitor.avi  0512-2018_06:14:51_monitor.avi  0512-2018_06:15:37_monitor.avi  0512-2018_06:16:04_monitor.avi  0512-2018_06:17:03_monitor.avi  0512-2018_06:33:20_monitor.avi  (+28 more)
zer018_core/core_util/include/core_util/: zdebug.h
zer018_core/core_util/launch/: logging.launch  main_zero_2018.launch  main_zero_timed.launch  monitor_test.launch  monitor_test_with_lms.launch  park_test.launch  park_test_without_cam.launch  system_launch_with_cam.launch  system_launch_without_cam.launch  test_path_tracker_with_rosbag.launch  timed_system_launch.launch  uturn_test.launch
zer018_core/core_util/scripts/: timed_roslaunch.sh
zer018_core/zero_monitor/: CMakeLists.txt  package.xml
zer018_core/zero_monitor/src/: monitor_window.py  monitor_window_for_rosbag.py  zero_monitor.cpp
zer018_external/lms151/: README.md
zer018_external/lms151/launch/: LMS1xx.launch  laser_client.launch
zer018_external/lms151/src/: LMS1xx_node.cpp
zer018_external/lms_client/: CMakeLists.txt  package.xml
zer018_external/lms_client/src/: lms_client.cpp
zer018_external/zero_serial/: CMakeLists.txt  package.xml
zer018_external/zero_serial/src/: control_manual.py  serial_com.py
zer018_motion/astar_planner/: CMakeLists.txt  package.xml
zer018_motion/astar_planner/config/: result.ppm
zer018_motion/astar_planner/include/: algorithm.h  collisiondetection.h  constants.h  constants2.h  dynamicvoronoi.h  node2d.h  path.h  smoother.h
zer018_motion/astar_planner/src/: algorithm.cpp  astar_planner.cpp  collisiondetection.cpp  dynamicvoronoi.cpp  node3d.cpp  path.cpp  smoother.cpp
zer018_motion/mission_manager/: CMakeLists.txt  package.xml
zer018_motion/mission_manager/src/: mission_manager.cpp
zer018_motion/path_tracker/: CMakeLists.txt  package.xml
zer018_motion/path_tracker/scripts/: path_gen_tst.py  path_tracker.py  path_tracker_new.py  test
zer018_perception/lane_vision/: CMakeLists.txt  README.md  package.xml
zer018_perception/lane_vision/src/: camera_node.py  camera_node_collect_data.py  camera_node_raw.py  capture_and_process_img.py  fake_camera_node.py  fake_node_debugger.py  fake_traffic_node.py  homography.py  imutils.py  jangho_test.py  junoflo.py  lane_detect.py  parking_detect.py  process_image.py  process_white.py  process_yellow.py  traffic_sign_data.py
zer018_perception/occupancy_map/: CMakeLists.txt  package.xml
zer018_perception/occupancy_map/src/: occupancy_map.cpp
zer018_perception/zero_mission/: CMakeLists.txt  README.md  package.xml
zer018_perception/zero_mission/src/: parking_sign.py  stopline.py  traffic_camera_node.py  traffic_labels.txt
