<?xml version="1.0"?>
<package format="2">
  <name>astar_planner</name>
  <version>0.0.0</version>
  <description>The astar_planner package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jhchoi0709@gmail.com">snuzero</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>core_msgs</build_depend>
  <build_depend>core_util</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <!-- <build_export_depend>pcl</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend> -->
  <exec_depend>core_msgs</exec_depend>
  <exec_depend>core_util</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>pcl</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>tf</exec_depend>
</package>
